--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   ],
   "private": false,
   "license": "MIT",
-  "dependencies": {
-    "epage-iview": "^0.2.0",
-    "iview": "^3.5.4"
-  },
+  
   "engines": {
     "node": ">= 8.10.0",
     "npm": ">= 4.0.0"
@@ -35,7 +32,18 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "dependencies": {
+    "epage-iview": "^0.2.2"
+  },
+  "peerDependencies": {
+    "vue": ">2.5",
+    "iview": ">=2.13",
+    "vuedraggable": ">=2.20.0",
+    "vuex": ">=3.1"
+  },
   "devDependencies": {
+    "iview": "^3.5.4",
+    "vuedraggable": "^2.20.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@vue/babel-preset-jsx": "^1.1.2",
