--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "chengzi <ttghost@126.com>",
   "main": "./dist/$${project_name}.min.js",
   "scripts": {
-    "start": "webpack-dev-server --config build/webpack.dev.js",
-    "build": "webpack --config build/webpack.build.js",
+    "start": "webpack-dev-server --config script/webpack.dev.js",
+    "build": "webpack --config script/webpack.build.js",
     "lint": "eslint src/",
     "analyz": "npm_config_report=true npm run build"
   },
@@ -33,7 +33,7 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "epage-iview": "^0.2.2"
+    "epage-iview": "^0.2.4"
   },
   "peerDependencies": {
     "vue": ">2.5",
