--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "epage-iview": "^0.6.0"
+    "epage": "^0.7.0",
+    "epage-iview": "^0.7.0"
   },
   "peerDependencies": {
     "vue": ">2.5",
@@ -43,6 +44,7 @@
     "vuex": ">=3.1"
   },
   "devDependencies": {
+    "vuedraggable": "^2.24.3",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@vue/babel-preset-jsx": "^1.1.2",
